--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">simple-list</string>
-    <string name="title_activity_main">simple-list</string>
-    <string name="package_name">com.example.app</string>
-    <string name="custom_url_scheme">com.example.app</string>
+    <string name="app_name">Simple List</string>
+    <string name="title_activity_main">Simple List</string>
+    <string name="package_name">fr.androcode.simpleList</string>
+    <string name="custom_url_scheme">fr.androcode.simpleList</string>
 </resources>
